# RepoPilot

./: .env.example  .gitignore  README.md  README_CORECODER.md  README_REPROCODER.md  pyproject.toml
corecoder/: __init__.py  agent.py  cli.py  diagnosis.py  prompt.py
corecoder/tools/: __init__.py  entry_detector.py  env_checker.py  repo_map.py  smoke_test_planner.py
docs/: design.md  development_summary.md  project_walkthrough.md  tool_system.md
examples/: repopilot_demo_prompt.md  reprocoder_demo_prompt.md
reports/: README.md  sample_external_pytorch_cifar_report.md  sample_repro_report.md
tests/: test_core.py  test_tools.py
